--- a/css/index.css
+++ b/css/index.css
@@ -1,70 +1,76 @@
 *{
     box-sizing: border-box;
 }
-.banner{
-    display: none;
-}
-section {
-    width: 450px;
-    margin: 40px auto;   
-}
-.slider {
-    position: relative;
-}
-.slider input[type=radio] {
-    display: none;
-}
-.slider-inner {
-    overflow: hidden;
+.slideshow-container{
     width: 100%;
+    position:relative;
+    margin:auto;
 }
-.slider-slides{
-    width: 300%;
-    transition: transform .8s ease;
+.carru{
+    height: 40%;
 }
-.slider-slides img {
-    float: left;
-    width: 450px;
-    height: 320px;    
+.mySlides{
+    display:none;
+    /* imagenes aparezcan x defecto */
 }
-.slider-controls {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: 0px;
-    z-index: 100;
-    text-align: center;
+.prev, .next{
+    cursor:pointer;
+    position:absolute;
+    top:50%;
+    width:auto;
+    margin-top:-22px;
+    padding:16px;
+    color:white;
+    font-weight:bold;
+    font-size:18px;
+    transition:0.6s ease;
+    border-radius:0 3px 3px 0;
+/* son las flechitas */
 }
-.slider-controls label {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    margin: 0 3px;
-    background: white;
-    cursor: pointer;   
-    border: 2px solid white;
-    border-radius: 50%;    
-    box-shadow: 0px 0px 2px rgba(0,0,0,.8);     
-    transition: background-color .2s;
+.next{
+    right:0;
+    border-radius:3px 0 0 3px;
 }
+.prev:hover, .next:hover{
+    background-color:rgba(0,0,0,0.8);
+}
+.text{
+    color:#f2f2f2;
+    font-size:15px;
+    padding:8px 12px;
+    position:absolute;
+    bottom:8px;
+    width:100%;
+    text-align:center;
+}
+   
+.numbertext{
+    color:#f2f2f2;
+    font-size:12px;
+    padding:8px 12px;
+    position:absolute;
+    top:0;
+}
+.fade{
+    -webkit-animation-name:fade;
+    -webkit-animation-duration:1.5s;
+    animation-name:fade;
+    animation-duration:1.5s;
+}
+   
+@-webkit-keyframes fade{
+    from{opacity:.4}
+    to{opacity:1}
+}
+   
+@keyframes fade{
+    from{opacity:.4}
+    to{opacity:1}
+}
+/* animaciones son */
 
-#btn-1:checked ~ .slider-controls label[for="btn-1"],
-#btn-2:checked ~ .slider-controls label[for="btn-2"],
-#btn-3:checked ~ .slider-controls label[for="btn-3"] { 
-    background-color: black;
-}
 
-#btn-1:checked ~ .slider-inner .slider-slides { 
-    transform: translate(0);
-}
 
-#btn-2:checked ~ .slider-inner .slider-slides { 
-    transform: translate(-450px);
-}
-
-#btn-3:checked ~ .slider-inner .slider-slides { 
-    transform: translate(-900px);
-}
 body{
     background-color: rgba(21, 9, 32, 0.712);
     font-family:'Comfortaa', cursive;
@@ -101,6 +107,7 @@ h2{
     padding: 15px 0px;
     border-radius: 20px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.644);
+    margin-bottom: 10px;
 }
 .top-tracks{
     display: block;
