--- a/css/generos.css
+++ b/css/generos.css
@@ -164,8 +164,7 @@ body{
     background-color: black;
     width: 95%;
     margin: auto;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
 }
 .fin{
     display: grid;
