--- a/css/playlist.css
+++ b/css/playlist.css
@@ -77,8 +77,7 @@
     background-color: black;
     width: 95%;
     margin: auto;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
 }
 .fin{
     display: grid;
