--- a/css/todoartis.css
+++ b/css/todoartis.css
@@ -138,8 +138,7 @@ body{
     background-color: black;
     width: 95%;
     margin: auto;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
     margin-bottom: 0;
 }
 .fin{
