--- a/css/playlist.css
+++ b/css/playlist.css
@@ -90,6 +90,35 @@
     margin: auto;
     list-style: none;
 }
+.ocultar{
+    display: none;
+}
+.buscar{
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    width: 40%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: rgba(0, 0, 0, 0.589) 1px 1px 1px;
+}
+.buscador{
+    text-align: center;
+    margin: 30px;
+}
+.boton-buscador{
+    background-color: black;
+    color: rgba(245, 245, 245, 0.384);
+    border-radius: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 8%;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: rgba(0, 0, 0, 0.589) 1px 1px 1px;
+}
 @media(max-width: 470px){
     .icono-play{
         display: none;
