--- a/css/todoartis.css
+++ b/css/todoartis.css
@@ -205,6 +205,13 @@ body{
     list-style: none;
 
 }
+.nombres{
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    margin-left: 15%;
+
+}
 @media(max-width: 768px){
     .descripcion{
         display: none;
@@ -304,5 +311,15 @@ body{
         padding-left: 2%;
         padding-top: 3%;
         padding-bottom: 3%;
+    }
+    .foto-bandas{
+        grid-template-columns: 1fr;
+    }
+    .fotito{
+        margin-left: 10%;
+    }
+    .fin{
+        grid-template-columns: none;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     }
 }
