--- a/css/index.css
+++ b/css/index.css
@@ -171,7 +171,7 @@ footer .tracks{
 }
 .fin{
     display: grid;
-    grid-template-columns: 0.1fr 0.2fr 0.2fr 1fr 1fr 1fr;
+    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
     height: 70px;
     margin-bottom: 0;
 }
@@ -190,6 +190,7 @@ footer .tracks{
     list-style: none;
     color: white;
     margin: auto;
+    text-decoration: none;
 }
 .ocultar{
     display: none;
@@ -248,6 +249,17 @@ footer .tracks{
     .todos{
         display: none;
     }   
+    .fin{
+        font-size: 10px;
+        grid-template-columns: 0.2fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr;
+    }
+    .boton-buscador{
+        width: auto;
+    }
+    .buscar{
+        width: auto;
+    }
+
 }
 @media(max-width: 496px){
     .titulop{
