--- a/css/resultados.css
+++ b/css/resultados.css
@@ -44,6 +44,9 @@ h1{
     background-color: rgba(242, 234, 232, 0.1) ;
     border-radius: 10px;
 }
+.loader{
+    text-align: center;
+}
 .resultados{
     
     margin-top: 20px;
