--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,8 @@ footer .tracks{
     grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
     height: 70px;
     margin-bottom: 0;
+    background-color: black;
+    border-radius: 20px;
 }
 .contenido-footer{
     color: white;
@@ -248,10 +250,12 @@ footer .tracks{
     }
     .todos{
         display: none;
-    }   
+    }
+   
     .fin{
         font-size: 10px;
         grid-template-columns: 0.2fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr;
+        
     }
     .boton-buscador{
         width: auto;
@@ -301,6 +305,10 @@ footer .tracks{
      .fin{
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        background-color: black;
+    }
+    .logoDeezer{
+        padding-left: none;
     }
 }
 @media (max-width: 453px){
@@ -359,6 +367,7 @@ footer .tracks{
         margin-bottom: 10px;
         margin: auto;
     }
+ 
 }
 *{
     margin: 0%;
