--- a/css/todoartis.css
+++ b/css/todoartis.css
@@ -236,6 +236,47 @@ body{
     text-decoration: none;
     color: black;
 } 
+.trackschart{
+    margin: auto;
+}
+.fotos{
+    margin: auto;
+}
+.trackschart{
+    position: relative;
+    width: 50%;
+    max-width: 300px;
+  }
+  
+  /* Make the image to responsive */
+  .image {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  /* The overlay effect - lays on top of the container and over the image */
+  .overlay {
+    /* position: absolute; */
+    bottom: -20%;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1;
+    width: 100%;
+    /* transition: .5s ease; */
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
+    
+  }
+  
+  /* When you mouse over the container, fade in the overlay title */
+  .trackschart:hover .overlay {
+    opacity: 1;
+    border-radius: 5px;
+  }
 @media(max-width: 768px){
     .descripcion{
         display: none;
@@ -302,6 +343,10 @@ body{
     }
     .fotito{
         margin-left: 20%;
+    }
+    .fotulis{
+        grid-template-columns: 1fr;
+    
     }
 }
 @media (max-width: 425px){
