--- a/css/generos.css
+++ b/css/generos.css
@@ -138,17 +138,53 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
     text-decoration: none;
+    padding-top: 2%;
     }
 .nombres{
     text-decoration: none;
     list-style: none;
     color: black;
 }
-.fotos{
+/* .fotos{
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 10px;
+} */
+.fotos{
+    margin: auto;
+    position: relative;
+    width: 50%;
+    max-width: 300px;
+    padding-bottom: 2%;
 }
+/* Make the image to responsive */
+.image {
+    display: block;
+    width: 70%;
+    height: auto;
+  }
+  
+  /* The overlay effect - lays on top of the container and over the image */
+  .overlay {
+    /* position: absolute; */
+    /* bottom: -20%; */
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5); /* Black see-through */
+    color: #f1f1f1;
+    width: 70%;
+    /* transition: .5s ease; */
+    opacity:0;
+    color: white;
+    font-size: 20px;
+    /* padding: 20px; */
+    text-align: center;
+    list-style: none;
+  }
+  .fotos:hover .overlay {
+    opacity: 1;
+    border-radius: 5px;
+    
+  }
 .nombregenero{
     background-color: rgba(242, 234, 232, 0.5);
     border-radius: 5px;
