--- a/css/generos.css
+++ b/css/generos.css
@@ -280,6 +280,12 @@ body{
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
+    .overlay{
+        opacity: 100%;
+        background-color: none;
+        background: none;
+    }
+    
 }
 @media (max-width: 654px){
     .grid-container ul{
