--- a/css/index.css
+++ b/css/index.css
@@ -168,14 +168,20 @@ footer .tracks{
     width: 95%;
     margin: auto;
     border-radius: 20px;
+    
 }
 .fin{
-    display: grid;
-    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
+    /* display: grid;
+    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr; */
     height: 70px;
     margin-bottom: 0;
     background-color: black;
     border-radius: 20px;
+
+}
+.futer{
+    display: grid;
+    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
 }
 .contenido-footer{
     color: white;
@@ -254,7 +260,7 @@ footer .tracks{
    
     .fin{
         font-size: 10px;
-        grid-template-columns: 0.2fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr;
+        /* grid-template-columns: 0.2fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr; */
         
     }
     .boton-buscador{
@@ -304,8 +310,14 @@ footer .tracks{
      }
      .fin{
         grid-template-columns: none;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; */
         background-color: black;
+        /* overflow: auto; */
+        margin-bottom: 10%
+    }
+    .futer{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     }
     .logoDeezer{
         padding-left: none;
