--- a/css/playlist.css
+++ b/css/playlist.css
@@ -90,12 +90,18 @@
     width: 95%;
     margin: auto;
     border-radius: 20px;
+    
 }
 .fin{
     display: grid;
-    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
-    height: 70px;
+    grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr; 
+    margin-bottom: 0;
+    background-color: black;
+    border-radius: 20px;
+    padding: 3px;
 }
+
+
 .contenido-footer{
     color: white;
     text-align: center;
@@ -104,14 +110,18 @@
 }
 .logoDeezer{
     height: 50px;
-    padding-left: 15%;
+    /* padding-left: 15%; */
+    list-style: none;
+    text-decoration: none;
+    margin: auto;
 }
 .redes-footer{
     text-align: initial;
     list-style: none;
-    color: white;
+    /* color: white; */
     margin: auto;
     text-decoration: none;
+    height: 30px;
 }
 .ocultar{
     display: none;
@@ -148,6 +158,24 @@
     }
     .buscar{
         width: auto;
+    }
+    .fin{
+        font-size: 10px;
+        grid-template-columns: 1fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr;
+    }
+    .logoDeezer{
+        
+        padding: none;
+    }
+}
+@media (max-width: 453px){
+    .fin{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr ;
+        gap: 2px;
+    } 
+    .contenido-footer{
+        font-size: 20px;
     }
 }
 @media(max-width: 470px){
@@ -194,10 +222,6 @@
         color: white;
         padding-top: 3%;
         padding-bottom: 3%;    
-    }
-    .fin{
-        grid-template-columns: none;
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    }   
+    } 
     
 }
