--- a/css/resultados.css
+++ b/css/resultados.css
@@ -67,12 +67,18 @@ a{
     width: 95%;
     margin: auto;
     border-radius: 20px;
+    
 }
 .fin{
     display: grid;
-    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
-    height: 70px;
+    grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr; 
+    margin-bottom: 0;
+    background-color: black;
+    border-radius: 20px;
+    padding: 3px;
 }
+
+
 .contenido-footer{
     color: white;
     text-align: center;
@@ -81,14 +87,18 @@ a{
 }
 .logoDeezer{
     height: 50px;
-    padding-left: 15%;
+    /* padding-left: 15%; */
+    list-style: none;
+    text-decoration: none;
+    margin: auto;
 }
 .redes-footer{
     text-align: initial;
     list-style: none;
-    color: white;
+    /* color: white; */
     margin: auto;
     text-decoration: none;
+    height: 30px;
 }
 .ocultar{
     display: none;
@@ -125,5 +135,23 @@ a{
     }
     .buscar{
         width: auto;
+    }
+    .fin{
+        font-size: 10px;
+        grid-template-columns: 1fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr;
+    }
+    .logoDeezer{
+        
+        padding: none;
+    }
+}
+@media (max-width: 453px){
+    .fin{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr ;
+        gap: 2px;
+    } 
+    .contenido-footer{
+        font-size: 20px;
     }
 }
