--- a/css/generos.css
+++ b/css/generos.css
@@ -201,12 +201,18 @@ body{
     width: 95%;
     margin: auto;
     border-radius: 20px;
+    
 }
 .fin{
     display: grid;
-    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
-    height: 70px;
+    grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr; 
+    margin-bottom: 0;
+    background-color: black;
+    border-radius: 20px;
+    padding: 3px;
 }
+
+
 .contenido-footer{
     color: white;
     text-align: center;
@@ -215,14 +221,18 @@ body{
 }
 .logoDeezer{
     height: 50px;
-    padding-left: 15%;
+    /* padding-left: 15%; */
+    list-style: none;
+    text-decoration: none;
+    margin: auto;
 }
 .redes-footer{
     text-align: initial;
     list-style: none;
-    color: white;
+    /* color: white; */
     margin: auto;
     text-decoration: none;
+    height: 30px;
 }
 .ocultar{
     display: none;
@@ -252,6 +262,9 @@ body{
     text-align: center;
     font-size: 18px;
     box-shadow: rgba(0, 0, 0, 0.589) 1px 1px 1px;
+}
+.fotos a{
+    text-decoration: none;
 }
 @media(max-width: 768px){
     .descripcion{
@@ -285,7 +298,14 @@ body{
         background-color: none;
         background: none;
     }
-    
+    .fin{
+        font-size: 10px;
+        grid-template-columns: 1fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr;
+    }
+    .logoDeezer{
+        
+        padding: none;
+    }
 }
 @media (max-width: 654px){
     .grid-container ul{
@@ -311,6 +331,16 @@ body{
     }
     .titulo{
         top: 70%;
+    }
+}
+@media (max-width: 453px){
+    .fin{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr ;
+        gap: 2px;
+    } 
+    .contenido-footer{
+        font-size: 20px;
     }
 }
 @media (max-width: 320px){
