--- a/css/todoartis.css
+++ b/css/todoartis.css
@@ -152,14 +152,18 @@ body{
     width: 95%;
     margin: auto;
     border-radius: 20px;
-    margin-bottom: 0;
+    
 }
 .fin{
     display: grid;
-    grid-template-columns: 0.2fr 0.2fr 0.3fr 0.3fr 1fr 1fr 1fr;
-    height: 70px;
+    grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr; 
     margin-bottom: 0;
+    background-color: black;
+    border-radius: 20px;
+    padding: 3px;
 }
+
+
 .contenido-footer{
     color: white;
     text-align: center;
@@ -168,14 +172,18 @@ body{
 }
 .logoDeezer{
     height: 50px;
-    padding-left: 15%;
+    /* padding-left: 15%; */
+    list-style: none;
+    text-decoration: none;
+    margin: auto;
 }
 .redes-footer{
     text-align: initial;
     list-style: none;
-    color: white;
+    /* color: white; */
     margin: auto;
     text-decoration: none;
+    height: 30px;
 }
 .foto-bandas{
     display: grid;
@@ -337,6 +345,14 @@ body{
         margin: 10%;
         width: 100%;
     }
+    .fin{
+        font-size: 10px;
+        grid-template-columns: 1fr 0.2fr 0.2fr 0.2fr 1fr 1fr 1fr;
+    }
+    .logoDeezer{
+        
+        padding: none;
+    }
 }
 @media (max-width: 654px){
     .grid-container ul{
@@ -382,18 +398,42 @@ body{
         grid-template-columns: 1fr;
     }
 }
+@media(max-width: 496px){
+    futer{
+        grid-template-columns: none;
+        /* grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr; */
+        background-color: black;
+        /* overflow: auto; */
+        margin-bottom: 10%
+    }
+    .futer{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+}
+@media (max-width: 453px){
+    .fin{
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 1fr 1fr 1fr ;
+        gap: 2px;
+    } 
+    .contenido-footer{
+        font-size: 20px;
+    }
+}
 @media (max-width: 425px){
     .foto-bandas{
         grid-template-columns: 1fr;
     }
-    .fin{
+    /* .fin{
         grid-template-columns: none;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
+    } */
     .fotulis{
         grid-template-columns: 1fr;
     }
 }
+
 @media (max-width: 320px){
     .grid-container ul{
         grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr;
