--- a/css/todoartis.css
+++ b/css/todoartis.css
@@ -242,7 +242,7 @@ body{
 }  */
 .trackschart a{
     text-decoration: none;
-    color: black;
+    color: white;
 } 
 .trackschart{
     margin: auto;
